--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@import'../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+::-webkit-scrollbar {
+    width: 8px; 
+ }
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+
+}
+
+::-webkit-scrollbar-thumb {
+  background: #a6d5fb;
+ 
+}
+::-webkit-scrollbar-thumb:hover {
+    background: #1c70b5;
+   
+  }
